applications/homelab/sleep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-pod
  template:
    metadata:
      labels:
        app: sleep-pod
    spec:
      containers:
      - name: sleep-container
        image: alpine:3.22
        command: ["sleep"]
        args: ["600"]
