applications/homelab/admin-minter.yml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-minter
spec:
  selector:
    app.kubernetes.io/name: admin-minter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-minter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-minter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-minter
    spec:
      containers:
        - name: admin-minter
          image: ghcr.io/smukherj1/homelab-depot/minter@sha256:02f56cb3fe238e291bdf8981f185863f450deccd75302583c464ee553126f6c7
          ports:
            - containerPort: 8080
      serviceAccountName: cluster-admin
