applications/homelab/homelab.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-minter
spec:
  selector:
    app: homelab-minter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-minter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-minter
  template:
    metadata:
      labels:
        app: homelab-minter
    spec:
      containers:
        - image: ghcr.io/smukherj1/homelab-depot/minter@sha256:91009ba2e6f6d707bb106d3038d20fd83ca4a197927e2a5ba32aeb760928ccd6
          name: homelab-minter
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: token
            - mountPath: "/etc/workload-identity"
              name: gcp-wif-credentials
              readOnly: true
      serviceAccountName: suvanjan-homelab
      volumes:
        - name: token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 3600
                  audience: https://iam.googleapis.com/projects/941738172592/locations/global/workloadIdentityPools/homelab/providers/homelab-kubernetes-cluster
        - name: gcp-wif-credentials
          configMap:
            name: gcp-wif-credentials
