applications/homelab/minter.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/admin-token"
            backend:
              service:
                name: admin-minter
                port:
                  number: 80
  defaultBackend:
    service:
      name: admin-minter
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - homelab
---
apiVersion: v1
kind: Service
metadata:
  name: admin-minter
spec:
  selector:
    app.kubernetes.io/name: admin-minter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-minter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-minter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-minter
    spec:
      containers:
        - name: admin-minter
          image: ghcr.io/smukherj1/homelab-depot/minter:main
          ports:
            - containerPort: 8080
      serviceAccountName: cluster-admin
